Final changes for B4

--- a/PropertyInspectorViews/main_pi_two.html
+++ b/PropertyInspectorViews/main_pi_two.html
@@ -45,7 +45,7 @@
     
     <!-- Debug Text -->
     <sdpi-item>
-        <p id="initPayloadText">Payload: 1,337ms <br>ProcessShortcuts: 1.337s<br>Payload Size: 0.00 kbs</p>
+        <p id="initPayloadText">Payload: 1,337ms <br>ProcessShortcuts: 1.337s<br>Payload Size: 0.00 kbs<br>Folders: #0<br>Shortcuts: #0</p>
     </sdpi-item>
 
 <script type="text/javascript">
